PZAboutKit // Fix some descriptions regarding the nature of this app.

--- a/Packages/PZAboutKit/Sources/PZAboutKit/Resources/Localizable.xcstrings
+++ b/Packages/PZAboutKit/Sources/PZAboutKit/Resources/Localizable.xcstrings
@@ -4727,73 +4727,73 @@
         "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "- Der Nachfolger von PizzaHelper4Genshin und PizzaHelper4HSR. Angetrieben von der nächsten Generation der United Pizza Engine.\n- Der Pizza Helper und seine Vorgänger stehen in keiner Verbindung zu miHoYo Co., Ltd. noch deren Tochtergesellschaften."
+            "value" : "- Der Nachfolger von PizzaHelper4Genshin und PizzaHelper4HSR. Angetrieben von der nächsten Generation der United Pizza Engine.\n- Diese App ist kein offizielles miHoYo-Produkt, sondern eine von Fans erstellte Kreation."
           }
         },
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "- The successor of both PizzaHelper4Genshin and PizzaHelper4HSR. Powered by the next-generation United Pizza Engine.\n- The Pizza Helper and its predecessors are not affiliated with miHoYo Co., Ltd. nor its subsidiaries."
+            "value" : "- The successor of both PizzaHelper4Genshin and PizzaHelper4HSR. Powered by the next-generation United Pizza Engine.\n- This app is not a miHoYo official product but a fan creation."
           }
         },
         "es" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "- El sucesor de ambos PizzaHelper4Genshin y PizzaHelper4HSR. Impulsado por el motor unificado de pizza de próxima generación.\n- El asistente de pizza y sus predecesores no están afiliados con miHoYo Co., Ltd. ni sus subsidiarias."
+            "value" : "- El sucesor de ambos PizzaHelper4Genshin y PizzaHelper4HSR. Impulsado por el motor unificado de pizza de próxima generación.\n- Esta aplicación no es un producto oficial de miHoYo, sino una creación de fans."
           }
         },
         "fil" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "- Ang kahalili ng parehong PizzaHelper4Genshin at PizzaHelper4HSR. Pinapagana ng next-generation na United Pizza Engine.\n- Ang Pizza Helper at ang mga nauna nitong bersyon ay hindi kaanib sa miHoYo Co., Ltd. ni sa mga subsidiaries nito."
+            "value" : "- Ang kahalili ng parehong PizzaHelper4Genshin at PizzaHelper4HSR. Pinapagana ng next-generation na United Pizza Engine.\n- Ang app na ito ay hindi opisyal na produkto ng miHoYo, kundi isang likha ng mga tagahanga."
           }
         },
         "fr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "- Le successeur de PizzaHelper4Genshin et de PizzaHelper4HSR. Fonctionnant via notre nouveau moteur Pizza Engine.\n- The Pizza Helper et ses prédécesseurs ne sont pas affiliés à miHoYo Co., Ltd. ni à ses filiales."
+            "value" : "- Le successeur de PizzaHelper4Genshin et de PizzaHelper4HSR. Fonctionnant via notre nouveau moteur Pizza Engine.\n- Cette application n'est pas un produit officiel de miHoYo, mais une création de fans."
           }
         },
         "it" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "- Il successore di entrambi PizzaHelper4Genshin e PizzaHelper4HSR. Alimentato dal motore unificato di nuova generazione United Pizza Engine.\n- Pizza Helper e i suoi predecessori non sono affiliati con miHoYo Co., Ltd. né con le sue sussidiarie."
+            "value" : "- Il successore di entrambi PizzaHelper4Genshin e PizzaHelper4HSR. Alimentato dal motore unificato di nuova generazione United Pizza Engine.\n- Questa app non è un prodotto ufficiale di miHoYo, ma una creazione dei fan."
           }
         },
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "- 今までの「原神ピザ」と「崩スタピザ」を統合し、両アプリの後継者として、次世代エンジン『統一ピザエンジン』で開発したアプリである。\n- アプリ「ピザ助手（無印）」およびその前身は、miHoYo株式会社またはその子会社とは一切関係ない。"
+            "value" : "- 今までの「原神ピザ」と「崩スタピザ」を統合し、両アプリの後継者として、次世代エンジン『統一ピザエンジン』で開発したアプリである。\n- このアプリはmiHoYoの公式製品ではなく、ファンが作成したものです。"
           }
         },
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "- PizzaHelper4Genshin 및 PizzaHelper4HSR의 후계자. 차세대 United Pizza Engine으로 구동됩니다.\n- Pizza Helper와 그 전신은 miHoYo Co., Ltd. 및 그 자회사와 관련이 없습니다."
+            "value" : "- PizzaHelper4Genshin 및 PizzaHelper4HSR의 후계자. 차세대 United Pizza Engine으로 구동됩니다.\n- 이 앱은 miHoYo의 공식 제품이 아니라 팬이 만든 창작물입니다."
           }
         },
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "- Преемник как PizzaHelper4Genshin, так и PizzaHelper4HSR. Работает на новейшем United Pizza Engine. \n- Pizza Helper и его предшественники не связаны с miHoYo Co., Ltd. или его дочерними компаниями. "
+            "value" : "- Преемник как PizzaHelper4Genshin, так и PizzaHelper4HSR. Работает на новейшем United Pizza Engine.\n- Это приложение не является официальным продуктом miHoYo, а представляет собой фанатское творение."
           }
         },
         "vi" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "- Người kế nhiệm của cả PizzaHelper4Genshin và PizzaHelper4HSR. Được hỗ trợ bởi động cơ Pizza Thống Nhất thế hệ tiếp theo.\n- Pizza Helper và những người tiền nhiệm của nó không liên quan tới công ty miHoYo Co., Ltd. cũng như các công ty con của nó."
+            "value" : "- Người kế nhiệm của cả PizzaHelper4Genshin và PizzaHelper4HSR. Được hỗ trợ bởi động cơ Pizza Thống Nhất thế hệ tiếp theo.\n- Ứng dụng này không phải là sản phẩm chính thức của miHoYo mà là một sáng tạo của người hâm mộ."
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "- 是「原神披萨小助手」与「星铁披萨小助手」的继任者，受次世代「统一披萨引擎」的加持。\n- 披萨小助手及其前身与米哈游股份有限公司（及其子公司）无牵涉。"
+            "value" : "- 是「原神披萨小助手」与「星铁披萨小助手」的继任者，受次世代「统一披萨引擎」的加持。\n- 本应用不是米哈游的官方产品，而是粉丝创作。"
           }
         },
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "- 是「原神披薩小助手」與「星鐵披薩小助手」的繼任者，受次世代「統一披薩引擎」的加持。\n- 披薩小助手及其前身與米哈遊股份有限公司（及其子公司）無牽涉。"
+            "value" : "- 是「原神披薩小助手」與「星鐵披薩小助手」的繼任者，受次世代「統一披薩引擎」的加持。\n- 敝應用不是米哈遊的官方產品，而是粉絲創作。"
           }
         }
       }
